--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,19 +2,25 @@ name: eventrack_app
 version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
-environment: 
-  sdk: '>=2.12.0 <3.0.0'
+environment:
+  sdk: ">=2.12.0 <3.0.0"
 
-dependencies: 
+dependencies:
   cupertino_icons: ^1.0.2
-  get: 4.1.4
-  flutter: 
+  get: ^4.1.4
+  json_serializable: ^4.1.3
+  dio: ^4.0.0
+  flutter_dotenv: ^5.0.0
+  flutter:
     sdk: flutter
 
-dev_dependencies: 
-  flutter_test: 
+dev_dependencies:
+  flutter_test:
     sdk: flutter
+  build_runner: ^2.0.4
 
-flutter: 
+flutter:
   uses-material-design: true
 
+  assets:
+    - .env
