--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.2
+  fluttericon: ^2.0.0
   get: ^4.1.4
   json_serializable: ^4.1.3
   dio: ^4.0.0
@@ -24,5 +25,6 @@ flutter:
 
   assets:
     - .env
+    - assets/icons/
    
     
