--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_dotenv: ^5.0.0
   flutter:
     sdk: flutter
+  flutter_slidable: ^0.6.0
 
 dev_dependencies:
   flutter_test:
