--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
   json_serializable: ^4.1.3
   dio: ^4.0.0
   flutter_dotenv: ^5.0.0
+  dart_date: ^1.1.0
+  geocoding: ^2.0.0
   flutter:
     sdk: flutter
 
