--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.eventrack_app">
-   <application
+
+  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+  <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+  
+  <application
         android:label="eventrack_app"
         android:icon="@mipmap/ic_launcher">
         <activity
@@ -34,6 +38,9 @@
         </activity>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyCSIRVT9egjTZQcEM5zCFRw6SpELNVfVBI"/>
+        
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
