--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,9 @@ dependencies:
   dio: ^4.0.0
   flutter_dotenv: ^5.0.0
   dart_date: ^1.1.0
+  geolocator: ^7.1.0
+  google_maps_flutter: ^2.0.6
+  mapbox_search_flutter: ^1.0.6+1
   geocoding: ^2.0.0
   flutter:
     sdk: flutter
