--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   json_serializable: ^4.1.3
   dio: ^4.0.0
   flutter_dotenv: ^5.0.0
+  get_cli: ^1.5.0
   flutter:
     sdk: flutter
 
