--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   file_picker: ^3.0.3
   flutter:
     sdk: flutter
+  shared_preferences: ^2.0.6
 
 dev_dependencies:
   flutter_test:
